--- a/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
+++ b/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
@@ -50,6 +50,46 @@
         cmd      = "es_xdoblock wcs/tools/manifest/hybrid/warp"
         sfx      = ""
         cooldown = "7|6|5|4|3"
+[Marine Class]
+	required	   = 5620
+	maximum		   = 0
+	restrictmap	   = ""
+	restrictteam   = 0
+	restrictitem   = ""
+	teamlimit	   = 0
+	author		   = "NovaKiller & Manifest"
+	desc		   = "A special combat expert educated in the marine corps"
+	spawncmd	   = ""
+	deathcmd	   = ""
+	roundstartcmd  = ""
+	roundendcmd	   = ""
+	preloadcmd	   = ""
+	allowonly	   = ""
+	onchange	   = ""
+	numberofskills = 4
+	numberoflevels = 8
+	skillnames	   = "Marine weapons|Aim training|Hot spot|Adrenaline"
+	skilldescr	   = "Gives you 15-100% chance to receive a deagle and m4a1 upon spawning|Gives you 5-20% chance to deal an additional 6-17 damage when attacking|5-20% Chance to slow down your targets running speed when attacking|Temporarily gain 15-100 health for 5 seconds"
+	skillcfg	   = "player_spawn|player_attacker|player_attacker|player_ultimate"
+	skillneeded	   = "0|0|0|8"
+	category	   = "All races"
+	[[skill1]]
+		setting	= "es_xset wcs_chance 15|es_xset wcs_chance 30|es_xset wcs_chance 45|es_xset wcs_chance 60|es_xset wcs_chance 70|es_xset wcs_chance 80|es_xset wcs_chance 90|es_xset wcs_chance 100"
+		cmd		= "es_xdoblock wcs/tools/manifest/marine_class/weaponry"
+		sfx		= ""
+	[[skill2]]
+		setting	= "es_xset wcs_chance 5|es_xset wcs_chance 8|es_xset wcs_chance 10|es_xset wcs_chance 12|es_xset wcs_chance 14|es_xset wcs_chance 16|es_xset wcs_chance 18|es_xset wcs_chance 20"
+		cmd		= "es_xdoblock wcs/tools/manifest/marine_class/damage"
+		sfx		= ""
+	[[skill3]]
+		setting	= "es_xset wcs_chance 5|es_xset wcs_chance 8|es_xset wcs_chance 10|es_xset wcs_chance 12|es_xset wcs_chance 14|es_xset wcs_chance 16|es_xset wcs_chance 18|es_xset wcs_chance 20"
+		cmd		= "es_xdoblock wcs/tools/manifest/marine_class/slow"
+		sfx		= ""
+	[[skill4]]
+        setting  = "es_xset wcs_addhealth 15|es_xset wcs_addhealth 30|es_xset wcs_addhealth 45|es_xset wcs_addhealth 60|es_xset wcs_addhealth 70|es_xset wcs_addhealth 80|es_xset wcs_addhealth 90|es_xset wcs_addhealth 100"
+        cmd      = "es_xdoblock wcs/tools/manifest/marine_class/temporary_health"
+        sfx      = ""
+        cooldown = "25|22|20|19|18|17|16|15"
 [Protoss Carrier]
 	required	   = 0
 	maximum		   = 0
