--- a/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
+++ b/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
@@ -50,6 +50,54 @@
         cmd      = "es_xdoblock wcs/tools/manifest/hybrid/warp"
         sfx      = ""
         cooldown = "7|6|5|4|3"
+[Jim Raynor]
+	required	   = 0
+	maximum		   = 0
+	restrictmap	   = ""
+	restrictteam   = 0
+	restrictitem   = ""
+	teamlimit	   = 0
+	author		   = "Novakiller & Manifest"
+	desc		   = "James Eugene - A former Terran marshal"
+	spawncmd	   = ""
+	deathcmd	   = ""
+	roundstartcmd  = ""
+	roundendcmd	   = ""
+	preloadcmd	   = ""
+	allowonly	   = ""
+	onchange	   = ""
+	numberofskills = 6
+	numberoflevels = 8
+	skillnames	   = "Health pack|Speed pack|Supplies|Drop shipment|Team power pack|Stim pack"
+	skilldescr	   = "You gain an additional 5-40 health|Your speed will increase by 5-40%|15-100% Chance to create three M4A1's for you and your teammates upon spawning|You have 5-40% chance to respawn a teammate|15-100% Chance to grant your teammates 5-25 health|Sacrifices 10 health to increase your speed by 5-8%"
+	skillcfg	   = "player_spawn|player_spawn|player_spawn|player_spawn|player_spawn|player_ultimate"
+	skillneeded	   = "0|0|0|0|0|8"
+	category	   = "All races"
+	[[skill1]]
+		setting	= "es_xset wcs_addhealth 5|es_xset wcs_addhealth 10|es_xset wcs_addhealth 15|es_xset wcs_addhealth 20|es_xset wcs_addhealth 25|es_xset wcs_addhealth 30|es_xset wcs_addhealth 35|es_xset wcs_addhealth 40"
+		cmd		= "es_xdoblock wcs/tools/manifest/jim_raynor/health"
+		sfx		= ""
+	[[skill2]]
+		setting	= "es_xset wcs_speed 1.05|es_xset wcs_speed 1.1|es_xset wcs_speed 1.15|es_xset wcs_speed 1.2|es_xset wcs_speed 1.25|es_xset wcs_speed 1.3|es_xset wcs_speed 1.35|es_xset wcs_speed 1.4"
+		cmd		= "es_xdoblock wcs/tools/manifest/jim_raynor/speed"
+		sfx		= ""
+	[[skill3]]
+		setting	= "es_xset wcs_chance 15|es_xset wcs_chance 30|es_xset wcs_chance 45|es_xset wcs_chance 60|es_xset wcs_chance 70|es_xset wcs_chance 80|es_xset wcs_chance 90|es_xset wcs_chance 100"
+		cmd		= "es_xdoblock wcs/tools/manifest/jim_raynor/weapon_primary"
+		sfx		= ""
+	[[skill4]]
+		setting	= "es_xset wcs_chance 5|es_xset wcs_chance 10|es_xset wcs_chance 15|es_xset wcs_chance 20|es_xset wcs_chance 25|es_xset wcs_chance 30|es_xset wcs_chance 35|es_xset wcs_chance 40"
+		cmd		= "es_xdoblock wcs/tools/manifest/jim_raynor/phoenix"
+		sfx		= ""
+	[[skill5]]
+		setting	= "es_xset wcs_chance 15|es_xset wcs_chance 30|es_xset wcs_chance 45|es_xset wcs_chance 60|es_xset wcs_chance 70|es_xset wcs_chance 80|es_xset wcs_chance 90|es_xset wcs_chance 100"
+		cmd		= "es_xdoblock wcs/tools/manifest/jim_raynor/team_health"
+		sfx		= ""
+	[[skill6]]
+        setting  = "|||||||"
+        cmd      = "es_xdoblock wcs/tools/manifest/jim_raynor/temporary_speed"
+        sfx      = ""
+        cooldown = "20|16|13|10|8|7|6|5"
 [Marine Class]
 	required	   = 5620
 	maximum		   = 0
