Fixed: Jim Raynor
Fixed Jim Raynor's phoenix skill. The first teammate who dies from Jim Raynor's team should now be respawned. This can only occur once every round.

--- a/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
+++ b/cfg/source-python/wcs/Racepack Novakiller - (Version 1.0.0B).ini
@@ -158,7 +158,7 @@
 	numberoflevels = 5
 	skillnames	   = "Interceptors|Gravitas thrusters|Maelstrom|Argus Talisman"
 	skilldescr	   = "Press your ability button to set down an interceptor, which deals damage to enemies that come near it|Gravitas thrusters reduces your gravity by 10-50%|Maelstrom has a 5-15% chance to freeze an enemy for 1 second|You use the Agrus talisman to weave a spell freezing all allies within 400 feet for 2.5 seconds"
-	skillcfg	   = "player_spawn|player_spawn|player_attacker|player_ultimate"
+	skillcfg	   = "player_ability|player_spawn|player_attacker|player_ultimate"
 	skillneeded	   = "0|0|0|8"
 	category	   = "All races"
 	[[skill1]]
